# rustget

./: Cargo.toml  examples.txt
src/: main.rs
