[package]
name = "rustget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
rand_core = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p256 = { version = "0.10.0", features = ["ecdsa", "ecdsa-core"] }
sha2 = "0.10.0"
ureq = { version = "2.3.1", features = ["json"] }
base64 = "0.13.0"
ring = "0.16.20"