[package]
name = "rustget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.3.1", features = ["json"] }
base64 = "0.13.0"
hex = "0.4.3"